@@ -317,6 +317,10 @@ Extension Modules
 Library
 -------
 
+- bpo-30243: Removed the __init__ methods of _json's scanner and encoder.
+  Misusing them could cause memory leaks or crashes.  Now scanner and encoder
+  objects are completely initialized in the __new__ methods.
+
 - bpo-30215: Compiled regular expression objects with the re.LOCALE flag no
   longer depend on the locale at compile time.  Only the locale at matching
   time affects the result of matching.
